add : ajout du choix du player de choisir son option ainsi que de placer une tuile fix : correction de l'overpopulation, de l'update des options et de l'ajout d'un token